--- a/debian/control
+++ b/debian/control
@@ -8,9 +8,12 @@ Rules-Requires-Root: no
 
 Package: pkgname1
 Architecture: linux-any
+# Delete any of these lines if un-used
 Depends: ${misc:Depends}, depends
 Recommends: high priority optdepends
 Conflicts: conflicts
 Suggests: low priority optdepends
 Breaks: also conflicts!?
+Provides: provides
+#
 Description: pkgdesc
