--- a/.github/workflows/release-nesti386.yml
+++ b/.github/workflows/release-nesti386.yml
@@ -1,4 +1,4 @@
-name: PikaOS Package Release
+name: PikaOS Package Build & Release (i386)
 
 on:
   workflow_dispatch
@@ -7,14 +7,14 @@ jobs:
   build:
     runs-on: self-hosted
     container:
-      image: ghcr.io/pikaos-linux/pikaos-builder:nest
+      image: ghcr.io/pikaos-linux/pikaos-builder:nesti386
       volumes:
         - /proc:/proc
       options: --privileged -it
 
     steps:
     - uses: actions/checkout@v3
-    
+  
     - name: Import GPG key
       id: import_gpg
       uses: crazy-max/ghaction-import-gpg@v5
@@ -29,13 +29,9 @@ jobs:
         name: id_rsa
         known_hosts: ${{ secrets.KNOWN_HOSTS }}
         if_key_exists: replace
-
-    - name: Update apt cache
-      run: apt-get update -y
     
     - name: Build Package
-      run: ./main.sh
+      run: ./maini386.sh
 
     - name: Release Package
       run: ./release.sh
-        
